--- a/style/second.css
+++ b/style/second.css
@@ -40,3 +40,23 @@
     text-align: justify;
     /* font-weight: 900; */
 }
+
+#heroImage{
+    width: 100%;
+    height: 100vh;
+    /* background: image("../image/hero.jpg"); */
+    /* background: image("../image/hero.jpg"); */
+    background-image: url("hero.jpg");
+    background-position: center;
+    position: relative;
+    /* background-repeat: no-repeat; */
+}
+#heroTitle{
+    font-size: 90px;
+    border: 1px solid red;
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    left: 100px;
+
+}
